# trashpanda

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  codecov.yml  deny.toml  justfile  lefthook.yml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: release-please.yml  test.yml
benches/: bandit_benchmarks.rs
examples/: algorithm_comparison.rs  batch_operations.rs  contextual_linucb.rs  generic_vs_dynamic.rs  knearest_demo.rs  linear_comparison.rs  neighborhood_policies.rs  unified_api.rs
src/: arm.rs  bandit.rs  error.rs  lib.rs  policy.rs  regression.rs
src/contextual/: lingreedy.rs  lints.rs  linucb.rs  mod.rs
src/neighborhood/: clusters.rs  distance.rs  knearest.rs  mod.rs  radius.rs
src/policies/: epsilon_greedy.rs  knearest.rs  lingreedy.rs  lints.rs  linucb.rs  mod.rs  random.rs  thompson.rs  ucb.rs
src/simple/: epsilon_greedy.rs  mod.rs  random.rs  thompson.rs  ucb.rs
tests/: integration_test.rs  knearest_test.rs  test_epsilon_greedy.rs  test_policy_errors.rs  test_random_policy.rs
