[package]
name = "trashpanda"
version = "0.1.0"
edition = "2024"
description = "A Rust library for contextual multi-armed bandits"
repository = "https://github.com/mjkoo/trashpanda"
license = "Apache-2.0 OR MIT"
keywords = [
    "bandit",
    "reinforcement-learning",
    "machine-learning",
    "optimization",
]
categories = ["algorithms", "science"]

[dependencies]
thiserror = "2.0"
ordered-float = "5.0"
rand = "0.9"
rand_distr = "0.5"
indexmap = "2.10.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.7"
